--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.userosscache
 *.sln.docstates
 
+# NES Games + Data(sav)
+*.nes
+*.sav
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
